--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,7 @@ main {
 .imagem-botoes {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .imagem-botoes button {
@@ -72,10 +73,12 @@ main {
     background: linear-gradient(180deg, #08AEEA 0%, #2AF598 100%);
     border: none;
     cursor: pointer;
+    z-index: 1;
 }
 
 .imagem-botoes button.git {
-  margin-bottom: 10px;
+    margin-top: -100px;
+    margin-bottom: 10px;
 
 }
 .projetos {
@@ -83,6 +86,10 @@ main {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+}
+
+.fundoimg {
+    width: 250px;
 }
 .grupo-cards {
     display: flex;
@@ -104,4 +111,10 @@ button.tag {
     border: none;
     text-align: center;
 
+}
+
+.card {
+    width: 250px;
+    color: aliceblue;
+    text-align: center;
 }
