--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,41 @@ section.Habilidades {
     margin-top: 50px;
 }
 
+/*efeito no texto*/
+.nome-cargo h3 {
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid #2AF598; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em; /* Adjust as needed */
+    animation: 
+      typing 3.5s steps(40, end),
+      blink-caret .75s step-end infinite;
+  }
+  
+  /* The typing effect */
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+  
+  /* The typewriter cursor effect */
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: #2AF598; }
+  }
+/*efeito no texto*/
+
+
+.habilidades-ferrametas {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 50px;
+    color: aliceblue;
+}
+
+
+
 
 
 
