--- a/css/styles.css
+++ b/css/styles.css
@@ -7,22 +7,20 @@
 }
 body{
 
-    background: #161923;
+    background: #181b25;
 }
 
-main {
-    padding: 10%;
-}
 
 .topo {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    padding: 5% 10% 0% 10%;
 
 }
 
 .topo p {
-    width: 600px;
+    width: 44rem;
     color: #FFF;
     font-family: Poppins;
     font-size: 18px;
@@ -53,8 +51,10 @@ main {
 .topo img {
     width: 250px;
     mix-blend-mode: luminosity;
-    margin-top: -100px;
     opacity: 0.4;
+    position: absolute;
+    margin-top: -198px;
+    z-index: -1;
 
 }
 
@@ -62,6 +62,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 14rem;
 }
 
 .imagem-botoes button {
@@ -71,22 +72,23 @@ main {
     background: linear-gradient(180deg, #08ea79 0%, #2AF598 100%);
     border: none;
     cursor: pointer;
-    z-index: 1;
     font-weight: 700;
     font-size: larger;
+
 }
 button.linkedin {
     margin-bottom: 10px;
 }
 button.git {
     margin-bottom: 10px;
+
 }
 
-section.Habilidades {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 50px;
+.imagem-botoes button:hover {
+    transition:500ms;
+    background: linear-gradient(180deg, #04a755 0%, #1a965e 100%);
 }
+
 
 /*efeito no texto*/
 .nome-cargo h3 {
@@ -94,7 +96,7 @@ section.Habilidades {
     border-right: .15em solid #2AF598; /* The typwriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
     margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-    letter-spacing: .15em; /* Adjust as needed */
+    width: 60%; /* tamanho do texto*/
     animation: 
       typing 3.5s steps(40, end),
       blink-caret .75s step-end infinite;
@@ -102,23 +104,32 @@ section.Habilidades {
   
   /* The typing effect */
   @keyframes typing {
-    from { width: 0 }
-    to { width: 100% }
+    from { width:0 }
+    to { width: 60% } /* tamanho texto*/
   }
   
   /* The typewriter cursor effect */
   @keyframes blink-caret {
     from, to { border-color: transparent }
-    50% { border-color: #2AF598; }
+    40% { border-color: #2AF598; }
   }
 /*efeito no texto*/
+
+
+section.habilidades-ferrametas {
+    background: #1f2330;
+    min-height: 200px;
+}
 
 
 .habilidades-ferrametas {
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     margin-top: 50px;
     color: aliceblue;
+    padding: 0% 10% 0% 10%;
+    
 }
 
 
@@ -132,6 +143,7 @@ section.Habilidades {
     justify-content: center;
     flex-direction: column;
     margin-top: 50px;
+    padding: 0% 10% 0% 10%;
 }
 
 .fundoimg {
@@ -149,7 +161,7 @@ img.fundoimg:hover {
     display: flex;
     gap: 30px;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .titulos {
