--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,8 @@ section.habilidades-ferrametas {
 img.fundoimg:hover {
     opacity: 1;
     transition: 500ms linear;
+    box-shadow: 0px 0px 5px 2px rgba(42,245,152,.5);
+    border-radius: 15px;
 }
 
 .grupo-cards {
@@ -165,7 +167,7 @@ img.fundoimg:hover {
 }
 
 .titulos {
-    color: #2AF598;
+    color: rgb(42, 245, 152);
     margin-bottom: 30px;
 }
 
