--- a/css/styles.css
+++ b/css/styles.css
@@ -10,21 +10,6 @@ body{
     background: #181b25;
 }
 
-img#grafismo01 {
-    width: 87px;
-    position: absolute;
-    margin-top: -33px;
-    margin-left: -932px;
-    opacity: .07;
-}
-
-img#grafismo02 {
-    width: 87px;
-    position: absolute;
-    margin-top: 325px;
-    margin-left: 346px;
-    opacity: .07;
-}
 .topo {
     display: flex;
     justify-content: space-evenly;
@@ -78,6 +63,7 @@ img#grafismo02 {
     flex-direction: column;
     align-items: center;
     margin-top: 14rem;
+    gap:1rem;
 }
 
 .imagem-botoes button {
@@ -91,13 +77,7 @@ img#grafismo02 {
     font-size: larger;
 
 }
-button.linkedin {
-    margin-bottom: 10px;
-}
-button.git {
-    margin-bottom: 10px;
 
-}
 
 .imagem-botoes button:hover {
     transition:500ms;
@@ -105,7 +85,7 @@ button.git {
 }
 
 .nome-cargo {
-    width: 50rem;
+    width: 40rem;
 }
 
 /*efeito no texto*/
@@ -134,20 +114,35 @@ button.git {
 /*efeito no texto*/
 
 
-section.habilidades-ferrametas {
+section.habilidades {
     background: #1f2330;
-    min-height: 200px;
+    min-height: 300px;
 }
 
+p.icon_text {
+    display: flex;
+    align-items: center;
+}
 
-.habilidades-ferrametas {
+h1.titulo_sk{
+    text-align: center;
+    padding-bottom: 1rem;
+}
+
+h1.habilidades_centro{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #08ea79;
+    margin-top: 3rem;
+    padding-top: 2rem;
+}
+.habilidades_ferramentas {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 50px;
-    color: aliceblue;
-    padding: 0% 10% 0% 10%;
-    
+    margin-top: 2rem;
+    color: aliceblue;   
 }
 
 
