--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@ body{
     border-right: .15em solid #2AF598; /* The typwriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
     margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-    width: 60%; /* tamanho do texto*/
+    width: 65%; /* tamanho do texto*/
     animation: 
       typing 3.5s steps(40, end),
       blink-caret .75s step-end infinite;
@@ -167,9 +167,7 @@ h1.habilidades_centro{
 
 img.fundoimg:hover {
     opacity: 1;
-    transition: 500ms linear;
-    box-shadow: 0px 0px 5px 2px rgba(42,245,152,.5);
-    border-radius: 15px;
+    
 }
 
 .grupo-cards {
@@ -196,11 +194,45 @@ button.tag {
 
 .card {
     width: 250px;
+    height: 300px;
     color: aliceblue;
+    background-color: #1f2330;
     text-align: center;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: space-between;
+    padding-bottom: 1rem;
 }
 
+.card:hover {
+    -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  -webkit-transform: scale(1.05);
+  transform:scale(1.05);
+  -webkit-transform-origin: 50% 50%;
+  -ms-transform-origin: 50% 50%;
+  transform-origin: 50% 50%;
+  
+    box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
+}
 
+.line-dec {
+    width: 60px;
+    height: 3px;
+    background-color: rgb(42, 245, 152);
+    margin: 10px auto;
+  }
+
+  .contato {
+    margin-top: 5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
 
 @media screen and (max-width: 1037px) {
     .imagem-botoes {
