--- a/css/styles.css
+++ b/css/styles.css
@@ -9,13 +9,20 @@ body{
 
     background: #181b25;
 }
+/*Topo do site*/
+
+
+
+
+
+
 
 .topo {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     padding: 5% 10% 0% 10%;
-    flex-wrap: wrap;
+    gap: 5rem;
 
 }
 
@@ -48,45 +55,57 @@ body{
     text-align: center;
 }
 
-.topo img {
+.img_perfil img {
     width: 250px;
     mix-blend-mode: luminosity;
     opacity: 0.4;
-    position: absolute;
-    margin-top: -198px;
-    z-index: -1;
+
 
 }
 
-.imagem-botoes {
-    display: flex;
-    flex-direction: column;
+.foto_social {
     align-items: center;
-    margin-top: 14rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.social_btn {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     gap:1rem;
+    font-size: small;
 }
 
-.imagem-botoes button {
-    width: 190px;
-    height: 42px;
+.social_btn button {
+    width: 40px;
+    height: 40px;
     border-radius: 50px;
     background: linear-gradient(180deg, #08ea79 0%, #2AF598 100%);
     border: none;
     cursor: pointer;
-    font-weight: 700;
-    font-size: larger;
 
 }
 
+.cv button {
+    margin-top: 1rem;
+    width: 160px;
+    height: 50px;
+    border-radius: 10px;
+    background-color: #08ea79;
+    opacity: 0.8;
+    border: none;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    cursor: pointer;
+}
 
-.imagem-botoes button:hover {
+.social_btn button:hover {
     transition:500ms;
     background: linear-gradient(180deg, #04a755 0%, #1a965e 100%);
 }
 
-.nome-cargo {
-    width: 40rem;
-}
+
 
 /*efeito no texto*/
 .nome-cargo h3 {
@@ -99,7 +118,7 @@ body{
       typing 3.5s steps(40, end),
       blink-caret .75s step-end infinite;
   }
-  
+  /*efeito no texto*/
   /* The typing effect */
   @keyframes typing {
     from { width:0 }
@@ -234,29 +253,33 @@ button.tag {
     justify-content: center;
   }
 
-@media screen and (max-width: 1037px) {
-    .imagem-botoes {
-    margin-top: 50px;
-    flex-direction: row;
-    align-items: flex-start;
-    gap: 10px; 
+
+
+@media screen and (max-width:768px) {
+    
+
+
+    .nome-cargo h3 {
+        font-size: 12pt;
+        width: 100%;
     }
 
-    img.fotop {
+    .img_perfil {
         visibility: hidden;
     }
 
-}
-@media screen and (max-width:768px) {
-    
-    .imagem-botoes button {
-        width: 96px;
-        font-size: smaller;
-
-
+    .social_btn{
+        margin-top: -300px;
+        flex-direction: row;
+        align-items: flex-start;
+        gap:20px;
+        
     }
 
-
+    .cv button {
+        width: 200px;
+        
+    }
 
 
     
@@ -266,34 +289,23 @@ button.tag {
     .topo h1 {
         font-size: 45pt;
     }
-    .topo p {
-        
-        font-size: unset;
-    }
 
-    .topo h3 {
-        font-size: 20px;
-    }
-
-
-    .nome-cargo h3 {
-        font-size: 7pt;
-    }
 
     .grupo-cards {
         justify-content: center;
         
     }
-
-    img.fotop {
-        visibility: hidden;
+/*efeito no texto*/
+    @keyframes typing {
+    from { width:0 }
+    to { width: 110% } /* tamanho texto*/
     }
-
-    .imagem-botoes{
-        margin-top: 50px;
-        flex-direction: row;
-        align-items: flex-start;
-        gap:10px;
-        
+  
+    /* Efeito no cursos */
+     @keyframes blink-caret {
+    from, to { border-color: transparent }
+    40% { border-color: #2AF598; }
     }
+/*efeito no texto*/
+
 }
