--- a/css/styles.css
+++ b/css/styles.css
@@ -208,7 +208,10 @@ img.fundoimg:hover {
     color: rgb(42, 245, 152);
     margin-bottom: 30px;
 }
-
+.cv a{
+    text-decoration: none;
+    color: #181b25;
+}
 button.tag {
     margin-top: 10px;
     width: 60px;
